# bunnyland-plugin-fortunesim

./: README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_fortunesim/: __init__.py  bands.py  charms.py  components.py  edges.py  enrichment.py  fortune.py  install.py  jinx.py  luck.py  omens.py  plugin.py  spatial.py  superstition.py  tarot.py
server/tests/: test_charms.py  test_enrichment.py  test_fortune.py  test_jinx.py  test_luck.py  test_omens.py  test_plugin.py  test_spatial.py  test_superstition.py  test_tarot.py
