[project]
name = "bunnyland-fortunesim"
version = "0.2.0"
description = "Out-of-tree Bunnyland plugin: an expansion-pack-sized bundle of luck, charms, omens, fortune-telling, and superstitions."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "bunnyland>=1.0.0rc2,<2",
    "pydantic>=2.0",
    "relics-ecs>=0.1.1,<0.2",
]

[project.entry-points."bunnyland.plugins"]
"bunnyland.fortunesim" = "bunnyland_fortunesim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_fortunesim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
